[package]
name = "vmm"
version = "0.1.1"
edition = "2021"

[dependencies]
epoll = "4.3.1"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.13.0"
libc = "0.2.91"
linux-loader = { version = "0.8.1", features = ["bzimage", "elf"] }
vm-memory = { version = "0.10.0", features = ["backend-mmap"] }
vmm-sys-util = "0.11.1"
virtio-bindings = "0.2.0"

# vm-device is not yet published on crates.io.
# To make sure that breaking changes to vm-device are not breaking the
# vm-vcpu build, we're using a fixed revision.
vm-device = { git = "https://github.com/lucido-simon/vm-device", rev = "27537ff920fb6b1f8749294c911648d8e44fd5e5" }
vm-allocator = { git = "https://github.com/lucido-simon/vm-allocator", rev = "dfb880a86763a0064fdd700fbe731f26fcbf6681"}
virtio-device = { git = "https://github.com/rust-vmm/vm-virtio" }
virtio-queue = { git = "https://github.com/rust-vmm/vm-virtio" }

vm-superio = "0.7.0"
